resolved z-index for timepicker

--- a/assets/stylesheets/master_backlog.css
+++ b/assets/stylesheets/master_backlog.css
@@ -731,3 +731,8 @@ ul li { vertical-align: bottom; } /* close IE7 gap between list items */
 
 /* show completed sprints */
 #show_completed_sprints { cursor:pointer; }
+
+
+#ui-datepicker-div {
+    z-index: 10  !important;
+}
